--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "sonarlint.connectedMode.project": {
     "connectionId": "https-sonarqa-farmtoplateapps-io-",
     "projectKey": "F2P-BlockchainSDK"
-  }
+  },
+  "DockerRun.DisableDockerrc": true
 }
