--- a/artifacts/docker-compose.yaml
+++ b/artifacts/docker-compose.yaml
@@ -6,7 +6,7 @@ networks:
 services:
   orderer.example.com:
     container_name: orderer.example.com
-    image: hyperledger/fabric-orderer:2.2.2
+    image: hyperledger/fabric-orderer:latest
     dns_search: .
     environment:
       - ORDERER_GENERAL_LOGLEVEL=info
@@ -45,7 +45,7 @@ services:
 
   orderer2.example.com:
     container_name: orderer2.example.com
-    image: hyperledger/fabric-orderer:2.2.2
+    image: hyperledger/fabric-orderer:latest
     dns_search: .
     environment:
       - ORDERER_GENERAL_LOGLEVEL=info
@@ -84,7 +84,7 @@ services:
 
   orderer3.example.com:
     container_name: orderer3.example.com
-    image: hyperledger/fabric-orderer:2.2.2
+    image: hyperledger/fabric-orderer:latest
     dns_search: .
     environment:
       - ORDERER_GENERAL_LOGLEVEL=info
@@ -123,7 +123,7 @@ services:
 
   couchdb0:
     container_name: couchdb0
-    image: couchdb:3.1.1
+    image: couchdb:latest
     environment:
       - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=adminpw
@@ -134,7 +134,7 @@ services:
 
   couchdb1:
     container_name: couchdb1
-    image: couchdb:3.1.1
+    image: couchdb:latest
     environment:
       - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=adminpw
@@ -145,7 +145,7 @@ services:
 
   couchdb2:
     container_name: couchdb2
-    image: couchdb:3.1.1
+    image: couchdb:latest
     environment:
       - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=adminpw
